--- a/SpringBootGuide/build.gradle
+++ b/SpringBootGuide/build.gradle
@@ -28,5 +28,6 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter')
     compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-redis')
+	compile('io.netty:netty-all:4.1.32.Final')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
